--- a/wp-content/themes/cordova/assets/less/layouts/_pages.less
+++ b/wp-content/themes/cordova/assets/less/layouts/_pages.less
@@ -21,3 +21,7 @@
 p.testimonial {
   text-align: justify;
 }
+
+section.testimonial {
+  margin-top: 30px;
+}
